footer section added

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
         </section>
         <section class="our-team">
             <h1 class="primary-heading">Meet Our Team</h1>
-            <p class="primary-desc">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.
+            <p class="primary-desc">We believe fitness should be accessible to everyone, everywhere, regardless of
+                income or access to a gym.
             </p>
             <div class="team-photo">
                 <div class="member">
@@ -140,6 +141,34 @@
 
         </section>
     </main>
+    <footer>
+        <div class="footer-items">
+            <div class="footer-content">
+                <div class="footer-details">
+                    <h1>Fitness</h1>
+                    <p class="primary-desc">We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym.
+                        With <br> hundreds of professional workouts.
+                    </p>
+                </div>
+                <div class="contact">
+                    <h3>Get Started</h3>
+                    <p>Service</p>
+                    <p>Contact Us</p>
+                    <p>Affiliate Program</p>
+                    <p>About Us</p>
+                </div>
+                <div class="contact">
+                    <h3>Get Started</h3>
+                    <p>Fitness</p>
+                    <p>Platform</p>
+                    <p>Workout Library</p>
+                    <p>App Design</p>
+                </div>
+            </div>
+            <hr>
+            <h4>All right reserved @Fitness 2024</h4>
+        </div>
+    </footer>
 
 </body>
 
