--- a/index.html
+++ b/index.html
@@ -89,6 +89,73 @@
             </div>
             <img src="images/run.jpg" alt="">
         </section>
+        <section class="bmi-calculator">
+            <div class="bmi-calc-heading">
+                <h1 class="primary-heading">BMI Calculator</h1>
+                <p class="primary-desc">We believe fitness should be accessible to everyone, everywhere, regardless of
+                    income or access to a gym.
+                </p>
+            </div>
+            <div class="calc-container">
+                <div class="calc-info">
+                    <div class="bmi-chart">
+                        <h2 class="bmi-heading">BMI Calculator Chart</h2>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>BMI</th>
+                                    <th>Weight Status</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Below 18.5</td>
+                                    <td>Underweight</td>
+                                </tr>
+                                <tr>
+                                    <td>18.5 - 24.9</td>
+                                    <td>Healthy</td>
+                                </tr>
+                                <tr>
+                                    <td>25.0 - 29.9</td>
+                                    <td>Overweight</td>
+                                </tr>
+                                <tr>
+                                    <td>30.0 - and Above</td>
+                                    <td>Obese</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="bmi-form">
+                        <h2 class="bmi-heading">Calculate your BMI</h2>
+                        <p class="primary-desc">We believe fitness should be accessible to everyone, everywhere, regardless of income or
+                            access to a gym. 
+                        </p>
+                        <form class="bmi-form-container">
+                            <div class="form-group">
+                                <input class="input-field" type="text" name="" placeholder="Height/cm" id="">
+                                <input class="input-field" type="text" name="" placeholder="Weight/kg" id="">
+                            </div>
+                            <div class="form-group">
+                                <input class="input-field" type="text" name="" placeholder="Age" id="">
+                                <select class="input-field" name="" id="">
+                                    <option value="">Sex</option>
+                                    <option value="male">Male</option>
+                                    <option value="female">Female</option>
+                                </select>
+                            </div>
+                            <select class="input-field" name="" id="">
+                                <option value="">Select an activity factor</option>
+                                <option value="">Active</option>
+                                <option value="">Not Active</option>
+                            </select>
+                            <input class="btn-primary" id="bmi-submit" type="submit" value="Calculate">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="our-team">
             <h1 class="primary-heading">Meet Our Team</h1>
             <p class="primary-desc">We believe fitness should be accessible to everyone, everywhere, regardless of
@@ -146,7 +213,8 @@
             <div class="footer-content">
                 <div class="footer-details">
                     <h1>Fitness</h1>
-                    <p class="primary-desc">We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym.
+                    <p class="primary-desc">We believe fitness should be accessible to everyone, <br> everywhere,
+                        regardless of income or access to a gym.
                         With <br> hundreds of professional workouts.
                     </p>
                 </div>
