--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project-02</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -19,6 +22,7 @@
                 <li><a href="">Contact</a></li>
                 <li><a href="">About</a></li>
             </ul>
+            <i class="fa-solid fa-bars"></i>
         </nav>
         <section class="banner">
             <div class="banner-content">
@@ -129,8 +133,9 @@
                     </div>
                     <div class="bmi-form">
                         <h2 class="bmi-heading">Calculate your BMI</h2>
-                        <p class="primary-desc">We believe fitness should be accessible to everyone, everywhere, regardless of income or
-                            access to a gym. 
+                        <p class="primary-desc">We believe fitness should be accessible to everyone, everywhere,
+                            regardless of income or
+                            access to a gym.
                         </p>
                         <form class="bmi-form-container">
                             <div class="form-group">
