--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
         <section class="banner">
             <div class="banner-content">
-                <h2>Get body in <br> shape & stay <br> healthy</h2>
+                <h2>Get body in <br> <span class="miama-font">shape</span> & stay <br> healthy</h2>
                 <p>A huge selection of health and fitness content, healthy recipes <br> and transformation stories to
                     help
                     you get fit and stay fit!
