header, habits, run and bmi section responsive for smaller device

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                     <option value="female">Female</option>
                                 </select>
                             </div>
-                            <select class="input-field" name="" id="">
+                            <select class="input-field full-width-field" name="" id="">
                                 <option value="">Select an activity factor</option>
                                 <option value="">Active</option>
                                 <option value="">Not Active</option>
@@ -161,7 +161,7 @@
                 </div>
             </div>
         </section>
-        <section class="our-team">
+        <section class="our-team hide">
             <h1 class="primary-heading">Meet Our Team</h1>
             <p class="primary-desc">We believe fitness should be accessible to everyone, everywhere, regardless of
                 income or access to a gym.
@@ -213,7 +213,7 @@
 
         </section>
     </main>
-    <footer>
+    <footer class="hide">
         <div class="footer-items">
             <div class="footer-content">
                 <div class="footer-details">
