all section responsive

--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
                 <div class="habit">
                     <img src="images/image3.png" alt="">
                     <h4>Movement</h4>
-                    <p class="primary-desc">We believe fitness should be accessible to everyone</p>
+                    <p class="primary-desc">We believe fitness should be <br> accessible to everyone</p>
                 </div>
                 <div class="habit">
                     <img src="images/image2.png" alt="">
                     <h4>Time</h4>
-                    <p class="primary-desc">We believe fitness should be accessible to everyone</p>
+                    <p class="primary-desc">We believe fitness should be <br> accessible to everyone</p>
                 </div>
                 <div class="habit">
                     <img src="images/image4.png" alt="">
                     <h4>Practice</h4>
-                    <p class="primary-desc">We believe fitness should be accessible to everyone</p>
+                    <p class="primary-desc">We believe fitness should be <br> accessible to everyone</p>
                 </div>
                 <div class="habit">
                     <img src="images/image5.png" alt="">
                     <h4>Weight Loss</h4>
-                    <p class="primary-desc">We believe fitness should be accessible to everyone</p>
+                    <p class="primary-desc">We believe fitness should be <br> accessible to everyone</p>
                 </div>
             </div>
         </section>
@@ -161,7 +161,7 @@
                 </div>
             </div>
         </section>
-        <section class="our-team hide">
+        <section class="our-team">
             <h1 class="primary-heading">Meet Our Team</h1>
             <p class="primary-desc">We believe fitness should be accessible to everyone, everywhere, regardless of
                 income or access to a gym.
@@ -213,7 +213,7 @@
 
         </section>
     </main>
-    <footer class="hide">
+    <footer>
         <div class="footer-items">
             <div class="footer-content">
                 <div class="footer-details">
