eat healthy section added

--- a/index.html
+++ b/index.html
@@ -93,6 +93,36 @@
             </div>
             <img src="images/run.jpg" alt="">
         </section>
+        <section class="eat-healthy">
+            <div class="eat-healthy-heading">
+                <h1 class="primary-heading">Eat Healthy</h1>
+                <p class="primary-desc">Keeping active and eating a healthy balanced diet can help you to maintain a
+                    healthy weight.
+                </p>
+            </div>
+            <div class="eat-group">
+                <div class="eat-content">
+                    <h2>Eat Nut</h2>
+                    <p class="primary-desc">Nuts are an important part of a heart-healthy diet.Eating an assortment of
+                        nuts can have some
+                        serious health benefits.
+                    </p>
+                    <button class="btn-primary">Learn More</button>
+                </div>
+                <img src="images/nuts.jfif" alt="">
+            </div>
+            <div class="eat-group">
+                <img src="images/greenfoods.jfif" alt="">
+                <div class="eat-content">
+                    <h2>Eat Green Foods</h2>
+                    <p class="primary-desc">Green foods are low in calories, yet high in fiber, vitamins, and
+                        phytonutrients, the benefits of leafy greens
+                        are incredible for your health in more ways than you would even suspect.
+                    </p>
+                    <button class="btn-primary">Learn More</button>
+                </div>
+            </div>
+        </section>
         <section class="bmi-calculator">
             <div class="bmi-calc-heading">
                 <h1 class="primary-heading">BMI Calculator</h1>
